oc-mangodb.yaml
kind: Pod
apiVersion: v1
metadata:
  generateName: mongo-544498d69-
  annotations:
    k8s.v1.cni.cncf.io/network-status: |-
      [{
          "name": "openshift-sdn",
          "interface": "eth0",
          "ips": [
              "10.130.3.145"
          ],
          "default": true,
          "dns": {}
      }]
    k8s.v1.cni.cncf.io/networks-status: |-
      [{
          "name": "openshift-sdn",
          "interface": "eth0",
          "ips": [
              "10.130.3.145"
          ],
          "default": true,
          "dns": {}
      }]
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/scc: restricted-v2
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  resourceVersion: '974122399'
  name: mongo-544498d69-hs7kh
  uid: eec0c07f-3f30-431e-80b8-2d6225bc9abe
  creationTimestamp: '2022-11-23T10:54:35Z'
  managedFields:
    - manager: kube-controller-manager
      operation: Update
      apiVersion: v1
      time: '2022-11-23T10:54:35Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:openshift.io/generated-by': {}
          'f:generateName': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:deployment': {}
            'f:pod-template-hash': {}
          'f:ownerReferences':
            .: {}
            'k:{"uid":"ab14492b-2872-4db9-b7ec-dc2465c1ce40"}': {}
        'f:spec':
          'f:containers':
            'k:{"name":"mongo"}':
              'f:image': {}
              'f:volumeMounts':
                .: {}
                'k:{"mountPath":"/data/configdb"}':
                  .: {}
                  'f:mountPath': {}
                  'f:name': {}
                'k:{"mountPath":"/data/db"}':
                  .: {}
                  'f:mountPath': {}
                  'f:name': {}
              'f:terminationMessagePolicy': {}
              .: {}
              'f:resources': {}
              'f:terminationMessagePath': {}
              'f:imagePullPolicy': {}
              'f:ports':
                .: {}
                'k:{"containerPort":27017,"protocol":"TCP"}':
                  .: {}
                  'f:containerPort': {}
                  'f:protocol': {}
              'f:name': {}
          'f:dnsPolicy': {}
          'f:enableServiceLinks': {}
          'f:restartPolicy': {}
          'f:schedulerName': {}
          'f:securityContext': {}
          'f:terminationGracePeriodSeconds': {}
          'f:volumes':
            .: {}
            'k:{"name":"mongo-1"}':
              .: {}
              'f:emptyDir': {}
              'f:name': {}
            'k:{"name":"mongo-2"}':
              .: {}
              'f:emptyDir': {}
              'f:name': {}
    - manager: multus
      operation: Update
      apiVersion: v1
      time: '2022-11-23T10:54:42Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:k8s.v1.cni.cncf.io/network-status': {}
            'f:k8s.v1.cni.cncf.io/networks-status': {}
      subresource: status
    - manager: kubelet
      operation: Update
      apiVersion: v1
      time: '2022-11-23T10:55:09Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:conditions':
            'k:{"type":"ContainersReady"}':
              .: {}
              'f:lastProbeTime': {}
              'f:lastTransitionTime': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Initialized"}':
              .: {}
              'f:lastProbeTime': {}
              'f:lastTransitionTime': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Ready"}':
              .: {}
              'f:lastProbeTime': {}
              'f:lastTransitionTime': {}
              'f:status': {}
              'f:type': {}
          'f:containerStatuses': {}
          'f:hostIP': {}
          'f:phase': {}
          'f:podIP': {}
          'f:podIPs':
            .: {}
            'k:{"ip":"10.130.3.145"}':
              .: {}
              'f:ip': {}
          'f:startTime': {}
      subresource: status
  namespace: febemd
  ownerReferences:
    - apiVersion: apps/v1
      kind: ReplicaSet
      name: mongo-544498d69
      uid: ab14492b-2872-4db9-b7ec-dc2465c1ce40
      controller: true
      blockOwnerDeletion: true
  labels:
    app: mongo
    deployment: mongo
    pod-template-hash: 544498d69
spec:
  restartPolicy: Always
  serviceAccountName: default
  imagePullSecrets:
    - name: default-dockercfg-m4pdn
  priority: 0
  schedulerName: default-scheduler
  enableServiceLinks: true
  terminationGracePeriodSeconds: 30
  preemptionPolicy: PreemptLowerPriority
  nodeName: worker-04.ocp-demo.ars.de
  securityContext:
    seLinuxOptions:
      level: 's0:c34,c29'
    fsGroup: 1001180000
    seccompProfile:
      type: RuntimeDefault
  containers:
    - resources: {}
      terminationMessagePath: /dev/termination-log
      name: mongo
      securityContext:
        capabilities:
          drop:
            - ALL
        runAsUser: 1001180000
        runAsNonRoot: true
        allowPrivilegeEscalation: false
      ports:
        - containerPort: 27017
          protocol: TCP
      imagePullPolicy: Always
      volumeMounts:
        - name: mongo-1
          mountPath: /data/configdb
        - name: mongo-2
          mountPath: /data/db
        - name: kube-api-access-rndgv
          readOnly: true
          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      terminationMessagePolicy: File
      image: >-
        image-registry.openshift-image-registry.svc:5000/febemd/mongo@sha256:3fa5e59fdb0b7c42bd2db52142ecbc673b0c1356b115b9ad2b32436e14281e4f
  serviceAccount: default
  volumes:
    - name: mongo-1
      emptyDir: {}
    - name: mongo-2
      emptyDir: {}
    - name: kube-api-access-rndgv
      projected:
        sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              name: kube-root-ca.crt
              items:
                - key: ca.crt
                  path: ca.crt
          - downwardAPI:
              items:
                - path: namespace
                  fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
          - configMap:
              name: openshift-service-ca.crt
              items:
                - key: service-ca.crt
                  path: service-ca.crt
        defaultMode: 420
  dnsPolicy: ClusterFirst
  tolerations:
    - key: node.kubernetes.io/not-ready
      operator: Exists
      effect: NoExecute
      tolerationSeconds: 300
    - key: node.kubernetes.io/unreachable
      operator: Exists
      effect: NoExecute
      tolerationSeconds: 300
status:
  phase: Running
  conditions:
    - type: Initialized
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2022-11-23T10:54:35Z'
    - type: Ready
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2022-11-23T10:55:09Z'
    - type: ContainersReady
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2022-11-23T10:55:09Z'
    - type: PodScheduled
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2022-11-23T10:54:35Z'
  hostIP: 193.149.37.28
  podIP: 10.130.3.145
  podIPs:
    - ip: 10.130.3.145
  startTime: '2022-11-23T10:54:35Z'
  containerStatuses:
    - restartCount: 0
      started: true
      ready: true
      name: mongo
      state:
        running:
          startedAt: '2022-11-23T10:55:08Z'
      imageID: >-
        image-registry.openshift-image-registry.svc:5000/febemd/mongo@sha256:3fa5e59fdb0b7c42bd2db52142ecbc673b0c1356b115b9ad2b32436e14281e4f
      image: >-
        image-registry.openshift-image-registry.svc:5000/febemd/mongo@sha256:3fa5e59fdb0b7c42bd2db52142ecbc673b0c1356b115b9ad2b32436e14281e4f
      lastState: {}
      containerID: 'cri-o://4b04f62ad50b59f6ca105cc0b7aafdcde297dcb04a8cf37454c6443d0f4eea39'
  qosClass: BestEffort
